testing/tests/ui/rinja-block.stderr
error: unknown node `fail`
 --> <source attribute>:2:6
       " fail %}\n{% endif %}"
 --> tests/ui/rinja-block.rs:5:1
  |
5 | /// Some documentation
  | ^^^^^^^^^^^^^^^^^^^^^^

error: when using `in_doc = true`, the struct's documentation needs a `rinja` code block
  --> tests/ui/rinja-block.rs:15:25
   |
15 | #[template(ext = "txt", in_doc = true)]
   |                         ^^^^^^

error: specify one template argument `path`, `source` or `in_doc`
  --> tests/ui/rinja-block.rs:24:3
   |
24 | #[template(ext = "txt")]
   |   ^^^^^^^^

error: unsupported attribute argument
  --> tests/ui/rinja-block.rs:33:25
   |
33 | #[template(ext = "txt", in_doc)]
   |                         ^^^^^^

error: specify one template argument `path`, `source` or `in_doc`
  --> tests/ui/rinja-block.rs:42:3
   |
42 | #[template(ext = "txt", in_doc = false)]
   |   ^^^^^^^^

error: template attribute `in_doc` expects a boolean value
  --> tests/ui/rinja-block.rs:51:34
   |
51 | #[template(ext = "txt", in_doc = "yes")]
   |                                  ^^^^^

error: when using `in_doc = true`, the enum's documentation needs a `rinja` code block
  --> tests/ui/rinja-block.rs:60:25
   |
60 | #[template(ext = "txt", in_doc = true)]
   |                         ^^^^^^

error: rinja templates are not supported for `union` types, only `struct` and `enum`
  --> tests/ui/rinja-block.rs:68:1
   |
68 | union NoDocForUnion {
   | ^^^^^
